--- a/index.html
+++ b/index.html
@@ -35,10 +35,192 @@
       <h2 id="headline">This is the story of Jackie Chan's career as a legendary actor</h2>
       <ul>
         <li>
+          <strong>1962–1975: Early small appearances</strong> He began his film career by appearing in small roles at
+          the age of five as a child actor. At age eight, he appeared with some of his fellow "Little Fortunes" in the
+          film Big and Little Wong Tin Bar (1962) with Li Li-Hua playing his mother. The following year, the young actor
+          appeared in extras of The Love Eterne (1963) and had a small role in King Hu's 1966 film Come Drink with Me.
+          In 1971, after an appearance as an extra in another kung fu film, A Touch of Zen, Chan was signed to Chu Mu's
+          Great Earth Film Company.
+        </li>
+        <li>
+          <strong>1976–1980: Start-up leading roles</strong> In 1976, Jackie Chan received a telegram from Willie Chan,
+          a film producer in the Hong Kong film industry who had been impressed with Jackie's stunt choreography work.
+          Willie Chan offered him an acting role in a film directed by Lo Wei. Lo saw Chan's performance in the John Woo
+          film Hand of Death (1976) and planned to model him after Bruce Lee with the film New Fist of Fury. His
+          stage name was changed to Sing Lung (Chinese: 成龍, also transcribed as Cheng Long, literally "become the
+          dragon") to emphasise his similarity to Bruce Lee, whose stage name meant "Little Dragon" in Chinese. The film
+          was unsuccessful because Chan was not accustomed to Lee's martial arts style. Despite the film's failure, Lo
+          Wei continued producing films with similar themes, but with little improvement at the box office.
 
+          Chan's first major breakthrough was the 1978 film Snake in the Eagle's Shadow, shot while he was loaned to
+          Seasonal Film Corporation under a two-picture deal. Director Yuen Woo-ping allowed Chan complete freedom
+          over his stunt work. The film established the comedic kung fu genre, and proved refreshing to the Hong Kong
+          audience. The same year, Chan then starred in Drunken Master, which finally propelled him to mainstream
+          success.
+
+          Upon Chan's return to Lo Wei's studio, Lo tried to replicate the comedic approach of Drunken Master, producing
+          and also showed new features at the time with Jackie as the Stunt Director Half a Loaf of Kung Fu and
+          Spiritual Kung Fu. He also gave Chan the opportunity to make his directorial debut in The Fearless Hyena.
+          When Willie Chan left the company, he advised Jackie to decide for himself whether or not to stay with Lo Wei.
+          During the shooting of Fearless Hyena Part II, Chan broke his contract and joined Golden Harvest, prompting Lo
+          to blackmail Chan with triads, blaming Willie for his star's departure. The dispute was resolved with the help
+          of fellow actor and director Jimmy Wang Yu, allowing Chan to stay with Golden Harvest.
+        </li>
+        <li>
+          <strong>1980–1987: Commercial success in the action comedy genre</strong> Willie Chan became Jackie's personal
+          manager and firm friend, and remained so for over 30 years. He was instrumental in launching Chan's
+          international career, beginning with his first forays into the American film industry in the 1980s. His first
+          Hollywood film was The Big Brawl in 1980. Chan then played a minor role in the 1981 film The Cannonball Run,
+          which grossed over US$100 million worldwide. Despite being largely ignored by North American audiences in
+          favour of established American actors such as Burt Reynolds, Chan was impressed by the outtakes shown at the
+          closing credits, inspiring him to include the same device in his future films.
+
+          After the commercial failure of The Protector in 1985, Chan temporarily abandoned his attempts to break into
+          the US market, returning his focus to Hong Kong films.[36]
+
+          Back in Hong Kong, Chan's films began to reach a larger audience in East Asia, with early successes in the
+          lucrative Japanese market including Drunken Master, The Young Master (1980) and Dragon Lord (1982). The Young
+          Master went on to beat previous box office records set by Bruce Lee and established Chan as Hong Kong cinema's
+          top star. With Dragon Lord, he began experimenting with elaborate stunt action sequences, including the final
+          fight scene where he performs various stunts, including one where he does a back flip off a loft and falls to
+          the lower ground.
+
+          Chan produced a number of action comedy films with his opera school friends Sammo Hung and Yuen Biao. The
+          three co-starred together for the first time in 1983 in Project A, which introduced a dangerous stunt-driven
+          style of martial arts that won it the Best Action Design Award at the third annual Hong Kong Film Awards. Over
+          the following two years, the "Three Brothers" appeared in Wheels on Meals and the original Lucky Stars
+          trilogy. In 1985, Chan made the first Police Story film, a crime action film in which Chan performed a number
+          of dangerous stunts. It won Best Film at the 1986 Hong Kong Film Awards. In 1986, Chan played "Asian Hawk," an
+          Indiana Jones-esque character, in the film Armour of God. The film was Chan's biggest domestic box office
+          success up to that point, grossing over HK$35 million.
+        </li>
+        <li>
+          <strong>1988–1998: Acclaimed film sequels and Hollywood breakthrough</strong> In 1988, Chan starred alongside
+          Sammo Hung and Yuen Biao for the last time to date in the film Dragons Forever. Hung co-directed with Corey
+          Yuen, and the villain in the film was played by Yuen Wah, both of whom were fellow graduates of the China
+          Drama Academy.
+
+          In the late 1980s and early 1990s, Chan starred in a number of successful sequels beginning with Project A
+          Part II and Police Story 2, which won the award for Best Action Choreography at the 1989 Hong Kong Film
+          Awards. This was followed by Armour of God II: Operation Condor, and Police Story 3: Super Cop, for which Chan
+          won the Best Actor Award at the 1993 Golden Horse Film Festival. In 1994, Chan reprised his role as Wong
+          Fei-hung in Drunken Master II, which was listed in Time Magazine's All-Time 100 Movies. Another sequel, Police
+          Story 4: First Strike, brought more awards and domestic box office success for Chan, but did not fare as well
+          in foreign markets.
+
+          Up until January 1995, his films grossed over HK$500 million (US$70 million) in Hong Kong, ¥39 billion (US$489
+          million) in Japan,[43] 11.5 million box office admissions in France, and 9.9 million box office admissions in
+          Germany. Despite his success in Asia and Europe, he was not very successful in North America, where he had
+          only two wide releases as a leading actor, The Big Brawl and The Protector, grossing US$9.51 million (US$32
+          million adjusted for inflation).
+
+          Chan rekindled his Hollywood ambitions in the 1990s, but refused early offers to play villains in Hollywood
+          films to avoid being typecast in future roles. For example, Sylvester Stallone offered him the role of Simon
+          Phoenix, a criminal in the futuristic film Demolition Man. Chan declined and the role was taken by Wesley
+          Snipes.
+
+          Chan finally succeeded in establishing a foothold in the North American market in 1995 with a worldwide
+          release of Rumble in the Bronx, attaining a cult following in the United States that was rare for Hong Kong
+          movie stars. The success of Rumble in the Bronx led to a 1996 release of Police Story 3: Super Cop in the
+          United States under the title Supercop, which grossed a total of US$16,270,600. Chan's first huge blockbuster
+          success came when he co-starred with Chris Tucker in the 1998 buddy cop action comedy Rush Hour, grossing
+          US$130 million in the United States alone. This film made him a Hollywood star, after which he wrote his
+          autobiography in collaboration with Jeff Yang entitled I Am Jackie Chan.
+        </li>
+        <li>
+          <strong>1999–2007: Fame in Hollywood and dramatisation</strong> In 1998, Chan released his final film for
+          Golden Harvest, Who Am I?. After leaving Golden Harvest in 1999, he produced and starred alongside Shu Qi in
+          Gorgeous, a romantic comedy that focused on personal relationships and featured only a few martial arts
+          sequences. Although Chan had left Golden Harvest in 1999, the company continued to produce and distribute for
+          two of his films, Gorgeous (1999) and The Accidental Spy (2001). Chan then helped create a PlayStation game in
+          2000 called Jackie Chan Stuntmaster, to which he lent his voice and performed the motion capture. He continued
+          his Hollywood success in 2000 when he teamed up with Owen Wilson in the Western action comedy Shanghai Noon. A
+          sequel, Shanghai Knights followed in 2003 and also featured his first on-screen fight scene with Donnie Yen.
+          He reunited with Chris Tucker for Rush Hour 2 (2001), which was an even bigger success than the original,
+          grossing $347 million worldwide. Chan experimented with the use of special effects and wirework for the fight
+          scenes in his next two Hollywood films, The Tuxedo (2002) and The Medallion (2003), which were not as
+          successful critically or commercially. In 2004, he teamed up with Steve Coogan in Around the World in 80 Days,
+          loosely based on Jules Verne's novel of the same name. In 2004, film scholar Andrew Willis stated that Chan
+          was "perhaps" the "most recognised star in the world".
+
+          Despite the success of the Rush Hour and Shanghai Noon films, Chan became frustrated with Hollywood over the
+          limited range of roles and lack of control over the filmmaking process. In response to Golden Harvest's
+          withdrawal from the film industry in 2003, Chan started his own film production company, JCE Movies Limited
+          (Jackie Chan Emperor Movies Limited) in association with Emperor Multimedia Group (EMG). His films have since
+          featured an increasing number of dramatic scenes while continuing to succeed at the box office; examples
+          include New Police Story (2004), The Myth (2005) and the hit film Rob-B-Hood (2006).
+
+          Chan's next release was the third instalment in the Rush Hour film series: Rush Hour 3 in August 2007. It
+          grossed US$255 million. However, it was a disappointment in Hong Kong, grossing only HK$3.5 million during its
+          opening weekend.
+        </li>
+        <li>
+          <strong>2008–present: New experiments and change in acting style</strong> Filming of The Forbidden Kingdom,
+          Chan's first on-screen collaboration with fellow Chinese actor Jet Li, was completed on 24 August 2007 and the
+          movie was released in April 2008. The movie featured heavy use of effects and wires. Chan voiced Master Monkey
+          in Kung Fu Panda (released in June 2008), appearing with Jack Black, Dustin Hoffman, and Angelina Jolie. In
+          addition, he has assisted Anthony Szeto in an advisory capacity for the writer-director's film Wushu, released
+          on 1 May 2008. The film stars Sammo Hung and Wang Wenjie as father and son.
+
+          In November 2007, Chan began filming Shinjuku Incident, a dramatic role featuring no martial arts sequences
+          with director Derek Yee, which sees Chan take on the role of a Chinese immigrant in Japan. The film was
+          released on 2 April 2009. According to his blog, Chan discussed his wishes to direct a film after completing
+          Shinjuku Incident, something he has not done for a number of years. The film was expected to be the third in
+          the Armour of God series, and had a working title of Armour of God III: Chinese Zodiac. The film was released
+          on 12 December 2012. Because the Screen Actors Guild did not go on strike, Chan started shooting his next
+          Hollywood movie The Spy Next Door at the end of October in New Mexico. In The Spy Next Door, Chan plays an
+          undercover agent whose cover is blown when he looks after the children of his girlfriend. In Little Big
+          Soldier, Chan stars alongside Leehom Wang as a soldier in the Warring States period in China. He is the lone
+          survivor of his army and must bring a captured enemy soldier Leehom Wang to the capital of his province.
+
+          In 2010, he starred with Jaden Smith in The Karate Kid, a remake of the 1984 original. This was Chan's first
+          dramatic American film. He plays Mr. Han, a kung fu master and maintenance man who teaches Jaden Smith's
+          character kung fu so he can defend himself from school bullies. His role in The Karate Kid won him the
+          Favorite Buttkicker award at the Nickelodeon Kids' Choice Awards in 2011. In Chan's next movie, Shaolin, he
+          plays a supporting role as a cook of a temple instead of one of the major characters.
+
+          His 100th movie, 1911, was released on 26 September 2011. Chan was the co-director, executive producer, and
+          lead star of the movie. While Chan has directed over ten films over his career, this was his first directorial
+          work since Who Am I? in 1998. 1911 premiered in North America on 14 October.
+
+          While at the 2012 Cannes Film Festival, Chan announced that he was retiring from action films citing that he
+          was getting too old for the genre. He later clarified that he would not be completely retiring from action
+          films, but would be performing fewer stunts and taking care of his body more.
+
+          In 2013, Chan starred in Police Story 2013, a reboot of the Police Story franchise directed by Ding Sheng, and
+          it was released in China at the end of 2013. Chan's next film Dragon Blade was released in early 2015 and
+          co-starred Hollywood actors John Cusack and Adrien Brody. In 2015, Chan was awarded the title of "Datuk" by
+          Malaysia as he helped Malaysia to boost its tourism, especially in Kuala Lumpur where he previously shot his
+          films. In early 2017, Chan's new film titled Kung Fu Yoga, a Chinese-Indian project, which also starred Disha
+          Patani, Sonu Sood and Amyra Dastur, was released. The film reunited Chan with director Stanley Tong, who
+          directed a number of Chan's films in the 1990s. Upon release, the film was a huge success at the box office,
+          and became the 5th highest-grossing film in China, one month after its release. In 2016, he teamed up with
+          Johnny Knoxville and starred in his own production Skiptrace.
+
+          Chan starred in the 2016 action-comedy Railroad Tigers and the 2017 action-thriller The Foreigner, an
+          Anglo-Chinese production. He also stars in the science fiction film Bleeding Steel. In 2021, he will appear in
+          Project X-Traction alongside John Cena.
+
+          His films had collectively grossed HK$1.14 billion (US$145 million) at the Hong Kong box office up until 2010,
+          over US$72 million in South Korea between 1991 and 2010, and ¥48.4 billion (US$607 million) in Japan up until
+          2012.[43] As of 2018, his films have grossed US$1.84 billion (more than US$2.44 billion adjusted for
+          inflation) in the United States and Canada,[56] CN¥8.6 billion (US$1.24 billion) in China, 20 million box
+          office admissions in France, and over 27.3 million admissions in Germany, Spain and Italy. As of 2018, his
+          films have grossed more than US$5 billion at the worldwide box office.
         </li>
       </ul>
+      <blockquote cite="https://www.goalcast.com/top-15-inspiring-jackie-chan-quotes/">
+        <p>
+          “I never wanted to be the next Bruce Lee. I just wanted to be the first Jackie Chan.”
+        </p>
+        <cite>-- Jackie Chan</cite>
+      </blockquote>
     </article>
+    <footer>
+      <h3>If you have time, you should read more about this incredible human being
+        on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Jackie_Chan" target="_blank">Wikipedia
+          entry</a>.</h3>
+    </footer>
   </main>
 
 </body>
